Agregar alumno, desarrollo del modal dinámico

--- a/src/app/components/alumnos/mostrar-alumnos/mostrar-alumnos.component.html
+++ b/src/app/components/alumnos/mostrar-alumnos/mostrar-alumnos.component.html
@@ -8,7 +8,7 @@
           [conIcono]="true"
           [icono]="'person_add'"
           [color]="'#33D660'"
-          [title]="'Ingresar nuevo alumno'"
+          [titleModal]="'Ingresar nuevo alumno'"
         >
         </button-modal>
       </div>
