--- a/src/app/components/alumnos/crear-alumnos/crear-alumnos.component.html
+++ b/src/app/components/alumnos/crear-alumnos/crear-alumnos.component.html
@@ -1,1 +1,26 @@
-<p>crear-alumnos works!</p>
+<form [formGroup]="myForm" (ngSubmit)="addAlumno()" novalidate>
+    <div class="form-row row">
+      <div class="form-group col-12 col-md-6 pe-2 contentenedor-control">
+        <label>Nombre</label>
+        <input type="text" class="form-control" placeholder="Ingrese el nombre del alumno" formControlName="nombre"/>
+        <label>Apellido</label>
+        <input type="text" class="form-control" placeholder="Ingrese el apellido del alumno" formControlName="apellido"/>
+        <label>Cédula</label>
+        <input type="text" class="form-control" placeholder="Ingrese la cédula del alumno" formControlName="cedula"/>
+        <label>Correo</label>
+        <input type="email" class="form-control" placeholder="Ingrese el correo del alumno" formControlName="correo"/>
+        <label>Celular</label>
+        <input type="text" class="form-control" placeholder="Ingrese el celular del alumno" formControlName="celular"/>
+        <label>Usuario</label>
+        <input type="text" class="form-control" placeholder="Ingrese el usuario del alumno" formControlName="usuario"/>
+        <label>Contraseña</label>
+        <input type="text" class="form-control" placeholder="Ingrese la contraseña del alumno" formControlName="contrasenia"/>
+        <label>Año Lectivo</label>
+        <input type="text" class="form-control" placeholder="Ingrese el año lectivo del alumno" formControlName="anioLectivo"/>
+      </div>
+  
+      <button type="submit" class="btn btn-success btnDefaultPrimary btn-stilo">
+        Agregar
+      </button>
+    </div>
+  </form>
