Eliminar alumno mediante id

--- a/src/app/components/alumnos/mostrar-alumnos/mostrar-alumnos.component.html
+++ b/src/app/components/alumnos/mostrar-alumnos/mostrar-alumnos.component.html
@@ -81,6 +81,7 @@
                     </button>
                     <button
                       class="btn btn-danger btnDefault eliminar"
+                      (click)="EliminarAlumno(alumno.id)"
                     >
                       <i class="material-icons">delete</i>
                     </button>
