--- a/src/app/components/alumnos/mostrar-alumnos/mostrar-alumnos.component.html
+++ b/src/app/components/alumnos/mostrar-alumnos/mostrar-alumnos.component.html
@@ -13,7 +13,7 @@
         </button-modal>
       </div>
     </div>
-    <!-- tabla mostrar Alumnos-->
+    <!-- tabla mostrar Alumnos, se realiza el CRUD-->
     <div class="contenedor-tabla table-responsive">
       <div class="col-lg-12">
         <div class="tabla-cuerpo">
