--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <ng-container [ngSwitch]="layout">
   <app-full-layout *ngSwitchCase="Layouts.Full"></app-full-layout>
+  <app-simple-layout *ngSwitchCase="Layouts.Simple"></app-simple-layout>
+  <app-simple-layout *ngSwitchDefault></app-simple-layout>
 </ng-container>
 <app-add-edit-modal></app-add-edit-modal>
